Embed ALL THE VIDEOS

--- a/Dag1-begreperFilosofi/1-Begreper.ipynb
+++ b/Dag1-begreperFilosofi/1-Begreper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cfddc0b3",
+   "id": "a488ab36",
    "metadata": {},
    "source": [
     "### Begreper fra SAS-verden\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "674fd536",
+   "id": "64677cf6",
    "metadata": {},
    "source": [
     "### Begreper fra \"objekt-orientert\"-python-verden\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a733a5ee",
+   "id": "9d7c4835",
    "metadata": {},
    "source": [
     "### En variabel med navn \"x\" av classen \"int\" er registrert som ett objekt med verdien \"6\"."
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c4b77a62",
+   "id": "caad4cc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ce0c7f6d",
+   "id": "c1c3e1b9",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f6964ffd",
+   "id": "09b19029",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "394665f8",
+   "id": "cb1e4a67",
    "metadata": {},
    "source": [
     "##### Vi overskriver variabelen \"x\" med ett objekt av classen \"float\" med verdi \"7.0\""
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "97a2b3c8",
+   "id": "c1b1d4a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d5d640d7",
+   "id": "c5fcc17d",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "421a2d1e",
+   "id": "1ae26138",
    "metadata": {},
    "source": [
     "##### Variabelen er den samme, men har et annet objekt tilknyttet seg.\n",
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "79cd359f",
+   "id": "8cb425c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7103ec64",
+   "id": "88954f97",
    "metadata": {},
    "source": [
     "### Variabelen \"y\" av classen \"string\" peker mot ett objekt som inneholder \"Ola\"."
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "44f8e180",
+   "id": "829146c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eacd4f8d",
+   "id": "6f3c1054",
    "metadata": {},
    "source": [
     "### Bonus: F-strings"
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "2b0af451",
+   "id": "e6559c0e",
    "metadata": {},
    "outputs": [
     {
@@ -188,8 +188,107 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "655d7e60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Muliggjør innbaking av video i notebooken\n",
+    "from IPython.display import IFrame"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "d23ee2cf",
+   "id": "5c88a8e2",
+   "metadata": {},
+   "source": [
+    "### Videohjelp: Datatyper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "27f99ce3",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"640\"\n",
+       "            height=\"360\"\n",
+       "            src=\"https://web.microsoftstream.com/embed/video/e6fe71ad-0294-44fc-9317-ce01d57c7f10?autoplay=false&showinfo=true\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f6170362220>"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(\"https://web.microsoftstream.com/embed/video/e6fe71ad-0294-44fc-9317-ce01d57c7f10?autoplay=false&showinfo=true\", \n",
+    "       width = 640, \n",
+    "       height = 360)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5238456d",
+   "metadata": {},
+   "source": [
+    "### Videohjelp: Logikk, loops, funksjoner    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "3d377d3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"640\"\n",
+       "            height=\"360\"\n",
+       "            src=\"https://web.microsoftstream.com/embed/video/bab18ae8-30e2-435a-8be7-b13412f5c4bf?autoplay=false&showinfo=true\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f6170362340>"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(\"https://web.microsoftstream.com/embed/video/bab18ae8-30e2-435a-8be7-b13412f5c4bf?autoplay=false&showinfo=true\", \n",
+    "       width = 640, \n",
+    "       height = 360)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "268fea39",
    "metadata": {},
    "source": [
     "### Logikk\n",
@@ -205,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "adae5ba4",
+   "id": "9c07b826",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9e7e0458",
+   "id": "7af7e32e",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "2719c508",
+   "id": "1dd6e983",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "a7a2656e",
+   "id": "39b57068",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e6df2bbc",
+   "id": "288d0582",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "c53c4481",
+   "id": "6e9ba3e8",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "be4bd84d",
+   "id": "1084f4ca",
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c42636f6",
+   "id": "dc266018",
    "metadata": {},
    "source": [
     "### Loops / tab inn\n",
@@ -370,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "008ae04a",
+   "id": "d957c38b",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "ef945158",
+   "id": "046d5652",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b29304a4",
+   "id": "80368b11",
    "metadata": {},
    "source": [
     "# Innhold\n",
@@ -434,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "51a72959",
+   "id": "75d6b3ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7c9098b",
+   "id": "3cd03a6d",
    "metadata": {},
    "source": [
     "### \"iterables\"\n",
@@ -460,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "b77399c9",
+   "id": "092c1ef2",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "89aafd9a",
+   "id": "08ab031e",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "10c8cec4",
+   "id": "7e64bb13",
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "4c271a75",
+   "id": "94d05f8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "e0024008",
+   "id": "ee14c285",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "d9abe8fa",
+   "id": "ce004f27",
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +685,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "821a279e",
+   "id": "55ffdd8d",
    "metadata": {},
    "source": [
     "### Dataframe (fra pandas)\n",
@@ -596,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "3bb1230f",
+   "id": "030fc2ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "676d1a37",
+   "id": "6ed2500a",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +788,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "ccde813f",
+   "id": "0b7629ed",
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "a13c270b",
+   "id": "87230426",
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +834,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "705a39a7",
+   "id": "31201590",
    "metadata": {},
    "source": [
     "### Operasjoner\n",
@@ -750,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "4d1f2080",
+   "id": "1fab97d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "c9fc884c",
+   "id": "1e29ee7a",
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "ea807b36",
+   "id": "45674ea2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +902,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "2616a9c2",
+   "id": "6ddd8ef8",
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "0b2ebda8",
+   "id": "511f4b92",
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "c9b31df4",
+   "id": "04aee910",
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "6273907f",
+   "id": "004ca9c9",
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "95d26e00",
+   "id": "c95310f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -920,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "6c67f382",
+   "id": "7b703ee4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,7 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "578ffd5d",
+   "id": "ad5fd099",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "686f6443",
+   "id": "984051b4",
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +1061,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1311c53e",
+   "id": "cf887b7a",
    "metadata": {},
    "source": [
     "### Filosofi"
@@ -971,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6dbb78e2",
+   "id": "fe433b96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +1079,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22dc2766",
+   "id": "ee6015b3",
    "metadata": {},
    "source": [
     "#### \"PEP\"-er\n",
@@ -990,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dcb8ec9",
+   "id": "171318bc",
    "metadata": {},
    "outputs": [],
    "source": []
