--- a/Dag1-begreperFilosofi/6-Diskusjon.ipynb
+++ b/Dag1-begreperFilosofi/6-Diskusjon.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b2423654",
+   "id": "ec08358e",
    "metadata": {},
    "source": [
     "### Hva ønsker dere å se gjort i Python?\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ada45867",
+   "id": "3175fabc",
    "metadata": {},
    "source": [
     "### Hvilke typer prosjekt og data skal dere jobbe på?\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c53d5b3f",
+   "id": "5ddc781d",
    "metadata": {},
    "source": [
     "### Bruker vi samme begreper om de samme prosessene?\n",
@@ -30,9 +30,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "550b361f",
+   "metadata": {},
+   "source": [
+    "### Lekser? \n",
+    "Se videoer på starten av neste ark?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b082320e",
+   "id": "bda60473",
    "metadata": {},
    "outputs": [],
    "source": []
