--- a/Dag2-miljo/1-JupyterNotebooks.ipynb
+++ b/Dag2-miljo/1-JupyterNotebooks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8cf582d9",
+   "id": "39bdd5f3",
    "metadata": {},
    "source": [
     "# Videohjelp"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9078b32f",
+   "id": "d3714c4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,53 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92390cc0",
+   "id": "baa1fba1",
+   "metadata": {},
+   "source": [
+    "### Helt grunnleggende oppstart på dapla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6728931f",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"640\"\n",
+       "            height=\"360\"\n",
+       "            src=\"https://web.microsoftstream.com/embed/video/bc909ee1-f3d0-4291-8ad2-99ea9012d037?autoplay=false&showinfo=true\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7fc7c00ae6d0>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(\"https://web.microsoftstream.com/embed/video/bc909ee1-f3d0-4291-8ad2-99ea9012d037?autoplay=false&showinfo=true\", \n",
+    "       width = 640, \n",
+    "       height = 360)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb44e67b",
    "metadata": {},
    "source": [
     "### Video: JupyterGUI"
@@ -29,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "be8a83e8",
+   "id": "378a5114",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -50,7 +96,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f5db3cf6a30>"
+       "<IPython.lib.display.IFrame at 0x7fc7c00c3cd0>"
       ]
      },
      "execution_count": 2,
@@ -66,16 +112,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ec83134",
+   "id": "3e53ab94",
    "metadata": {},
    "source": [
-    "### Video: 7 tips og triks i Jupyter"
+    "### Video: 7 tips og triks i Jupyter\n",
+    "(Ikke alt er like viktig, og vi går gjennom hotkeys på nytt lengre ned.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "333e3fd0",
+   "execution_count": 3,
+   "id": "38173c78",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -96,10 +143,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f72e950f820>"
+       "<IPython.lib.display.IFrame at 0x7fc7c00c3760>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "879b4cda",
+   "id": "11749689",
    "metadata": {},
    "source": [
     "<hr>"
@@ -120,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05093276",
+   "id": "39579224",
    "metadata": {},
    "source": [
     "# Jupyter som miljø\n",
@@ -129,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5317b33a",
+   "id": "cec2a843",
    "metadata": {},
    "source": [
     "### Mappe-struktur - \"hvor\" er lagringen din?"
@@ -137,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a48799f",
+   "id": "64e5e25b",
    "metadata": {},
    "source": [
     "### Kun det viktigste fra menyer i topp og venstre i Jupyter\n",
@@ -153,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b64b3ffb",
+   "id": "ff1f4490",
    "metadata": {},
    "source": [
     "### Hva er en kernel, og hvorfor har vi flere typer?"
@@ -161,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd26272e",
+   "id": "34b8b054",
    "metadata": {},
    "source": [
     "Frivillig video om å kjøre R fra Python med papermill:\\\n",
@@ -170,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e449969f",
+   "id": "a0308f18",
    "metadata": {},
    "source": [
     "### Hub Control Panel - Din egen \"Server\" - Dette skjer i skyen"
@@ -178,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e6ea099",
+   "id": "05b1601f",
    "metadata": {},
    "source": [
     "<hr>"
@@ -186,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1af24a65",
+   "id": "9aa72927",
    "metadata": {},
    "source": [
     "# Arbeid i Notebooks\n",
@@ -195,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2862d149",
+   "id": "1182dfd7",
    "metadata": {},
    "source": [
     "### Command og Edit-kontekst"
@@ -204,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4e7e6d30",
+   "id": "60f5ce02",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f088b59a",
+   "id": "01149d59",
    "metadata": {},
    "source": [
     "### Mest brukte hotkeys / shortcuts"
@@ -246,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d73fe96",
+   "id": "1aaa9910",
    "metadata": {},
    "source": [
     "- Esc - for å ut av en celle til \"command mode\"\n",
@@ -256,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa514291",
+   "id": "c8bdc495",
    "metadata": {},
    "source": [
     "- ctrl + enter   - Kjør cellen du står i\n",
@@ -265,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cffc47db",
+   "id": "04061ae9",
    "metadata": {},
    "source": [
     "- m - konverter cellen til markdown\n",
@@ -274,7 +321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2017929b",
+   "id": "0ff4789c",
    "metadata": {},
    "source": [
     "I commandmode:\n",
@@ -288,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7360304",
+   "id": "9b938a15",
    "metadata": {},
    "source": [
     "- tab - indent/autocomplete\n",
@@ -298,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a4ceb470",
+   "id": "7d7b3f9e",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "245cc27e",
+   "id": "324ef9d5",
    "metadata": {},
    "source": [
     "### Alt-drag"
@@ -328,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2c76739",
+   "id": "c623ea48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5647b6ba",
+   "id": "46a0a595",
    "metadata": {},
    "source": [
     "### Legg til bilder i markdown"
@@ -356,7 +403,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "63dd4232",
+   "id": "c506350f",
    "metadata": {},
    "source": [
     "![image.png](attachment:2db72dec-b096-449f-a454-37ac757d91da.png)"
@@ -364,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a34fa17f",
+   "id": "cf6964f4",
    "metadata": {},
    "source": [
     "### Shift tab for dokumentasjon, tab (inni ett ord) for autocomplete"
@@ -373,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "bd79ce17",
+   "id": "6e322613",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce6cc8ef",
+   "id": "31fec73d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "9833d7c0",
+   "id": "1ce34060",
    "metadata": {},
    "outputs": [],
    "source": [
