--- a/Dag2-miljo/4-datainnlast_ProdsonenVsDapla.ipynb
+++ b/Dag2-miljo/4-datainnlast_ProdsonenVsDapla.ipynb
@@ -2,7 +2,159 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6dcc06e5",
+   "id": "4c55f5ed",
+   "metadata": {},
+   "source": [
+    "# Videohjelp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "67cbe246",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import IFrame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e52b6965",
+   "metadata": {},
+   "source": [
+    "### Hvordan få edx-kursmateriell inn i Dapla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e364a139",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"640\"\n",
+       "            height=\"360\"\n",
+       "            src=\"https://web.microsoftstream.com/embed/video/9050c302-922f-4f39-b592-4f258ffc97c2?autoplay=false&showinfo=true\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f4a698fff70>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(\"https://web.microsoftstream.com/embed/video/9050c302-922f-4f39-b592-4f258ffc97c2?autoplay=false&showinfo=true\", \n",
+    "       width = 640, \n",
+    "       height = 360)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbe506e2",
+   "metadata": {},
+   "source": [
+    "### Hvordan få edx-kursmateriell inn i prodsonen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e8216a10",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"640\"\n",
+       "            height=\"360\"\n",
+       "            src=\"https://web.microsoftstream.com/embed/video/18ae1be3-a6c5-4bb6-83dc-9319e15d0ed2?autoplay=false&showinfo=true\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f4a699066d0>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(\"https://web.microsoftstream.com/embed/video/18ae1be3-a6c5-4bb6-83dc-9319e15d0ed2?autoplay=false&showinfo=true\", \n",
+    "       width = 640, \n",
+    "       height = 360)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7dce5d2b",
+   "metadata": {},
+   "source": [
+    "### Python i prodsonen med stammedata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "57ddb049",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"640\"\n",
+       "            height=\"360\"\n",
+       "            src=\"https://web.microsoftstream.com/embed/video/5bc50672-5fd8-4369-9075-8b5a4047a938?autoplay=false&showinfo=true\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f4a698ff4c0>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(\"https://web.microsoftstream.com/embed/video/5bc50672-5fd8-4369-9075-8b5a4047a938?autoplay=false&showinfo=true\", \n",
+    "       width = 640, \n",
+    "       height = 360)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "235eff5a",
    "metadata": {},
    "source": [
     "## På dapla har vi biblioteket \"dapla\"\n",
@@ -12,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1aadd52a",
+   "id": "d8013299",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2ae98c58",
+   "id": "6190d813",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "edab1ea2",
+   "id": "38bd2984",
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "02672883",
+   "id": "b6eefbfe",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15566339",
+   "id": "e5136ca1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ca9348a",
+   "id": "5b75f548",
    "metadata": {},
    "source": [
     "# I Prodsonen\n",
@@ -335,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1fd0ea0",
+   "id": "1919530d",
    "metadata": {},
    "outputs": [],
    "source": []
