Readme-list fix

--- a/senere/DagW-prosjektoppstart/5-kjoreplan_papermill_makefile.ipynb
+++ b/senere/DagW-prosjektoppstart/5-kjoreplan_papermill_makefile.ipynb
@@ -2,8 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "4eecacc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Muliggjør innbaking av video i notebooken\n",
+    "from IPython.display import IFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "261027a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"640\"\n",
+       "            height=\"360\"\n",
+       "            src=\"https://web.microsoftstream.com/embed/video/9311cb5a-07a5-4e4e-b19b-3613bc365785?autoplay=false&showinfo=true\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f8db40ced00>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(\"https://web.microsoftstream.com/embed/video/9311cb5a-07a5-4e4e-b19b-3613bc365785?autoplay=false&showinfo=true\", \n",
+    "       width = 640, \n",
+    "       height = 360)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c88dde6c",
+   "id": "bdaff636",
    "metadata": {},
    "outputs": [],
    "source": []
