--- a/Dag2-miljo/4-datainnlast_ProdsonenVsDapla.ipynb
+++ b/Dag2-miljo/4-datainnlast_ProdsonenVsDapla.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4c55f5ed",
+   "id": "41c8a5f8",
    "metadata": {},
    "source": [
     "# Videohjelp"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "67cbe246",
+   "execution_count": 2,
+   "id": "57451221",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,49 +20,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e52b6965",
+   "id": "eb873150",
    "metadata": {},
    "source": [
-    "### Hvordan få edx-kursmateriell inn i Dapla"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "e364a139",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"640\"\n",
-       "            height=\"360\"\n",
-       "            src=\"https://web.microsoftstream.com/embed/video/9050c302-922f-4f39-b592-4f258ffc97c2?autoplay=false&showinfo=true\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f4a698fff70>"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "IFrame(\"https://web.microsoftstream.com/embed/video/9050c302-922f-4f39-b592-4f258ffc97c2?autoplay=false&showinfo=true\", \n",
-    "       width = 640, \n",
-    "       height = 360)"
+    "# I Prodsonen\n",
+    "Kan vi laste sas-data rett fra linux-stammene, men ikke fra S: - H: - X:"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bbe506e2",
+   "id": "d044e1b8",
    "metadata": {},
    "source": [
     "### Hvordan få edx-kursmateriell inn i prodsonen"
@@ -71,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e8216a10",
+   "id": "cc56ea3d",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -108,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dce5d2b",
+   "id": "12576239",
    "metadata": {},
    "source": [
     "### Python i prodsonen med stammedata"
@@ -117,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "57ddb049",
+   "id": "ee7430da",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -154,7 +121,125 @@
   },
   {
    "cell_type": "markdown",
-   "id": "235eff5a",
+   "id": "4fc61770",
+   "metadata": {},
+   "source": [
+    "Simens post på yammer om at man kanskje bør velge prodsonen å lære seg først:\\\n",
+    "https://web.yammer.com/main/threads/eyJfdHlwZSI6IlRocmVhZCIsImlkIjoiMTA2NDYwNTc5MTk5Mzg1NiJ9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7b8037b",
+   "metadata": {},
+   "source": [
+    "Annonsering av Jupyterversjonen:\\\n",
+    "https://web.yammer.com/main/threads/eyJfdHlwZSI6IlRocmVhZCIs..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cb756d7",
+   "metadata": {},
+   "source": [
+    "I prodsonen - citrix bruk Chrome og gå til adressen:\\\n",
+    "https://sl-python-02.ssb.no:8443"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03caf785",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Eksempel innlastingskode av sasdata (mediebruksundersøkelsen)\n",
+    "stammepath = '/ssb/stamme03/kultmed/aar2020/wk24/medie_vekt_alle2020.sas7bdat'\n",
+    "df = pd.read_sas(stammepath, format = 'sas7bdat', encoding ='iso-8859-1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efb59062",
+   "metadata": {},
+   "source": [
+    "\"Root\"-mappen din i denne instansen er \"hjem-mappen\" din på linux."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed63ca52",
+   "metadata": {},
+   "source": [
+    "Bitbucket er ett alternativ til github.com og er delt mellom prodsonen og adminsonen, og kan nås på adressen:\\\n",
+    "https://git-adm.ssb.no/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31435a1a",
+   "metadata": {},
+   "source": [
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33e1fbd4",
+   "metadata": {},
+   "source": [
+    "# På Dapla"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94423317",
+   "metadata": {},
+   "source": [
+    "### Hvordan få edx-kursmateriell inn i Dapla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "063fa01b",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"640\"\n",
+       "            height=\"360\"\n",
+       "            src=\"https://web.microsoftstream.com/embed/video/9050c302-922f-4f39-b592-4f258ffc97c2?autoplay=false&showinfo=true\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f51b02045b0>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(\"https://web.microsoftstream.com/embed/video/9050c302-922f-4f39-b592-4f258ffc97c2?autoplay=false&showinfo=true\", \n",
+    "       width = 640, \n",
+    "       height = 360)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3467dcd",
    "metadata": {},
    "source": [
     "## På dapla har vi biblioteket \"dapla\"\n",
@@ -164,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d8013299",
+   "id": "c8280a2b",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6190d813",
+   "id": "1a674bcf",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "38bd2984",
+   "id": "9eda183a",
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b6eefbfe",
+   "id": "441a9576",
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5136ca1",
+   "id": "c36a4a6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,23 +559,6 @@
     "# Bla. skal verdivurdering være med som parameter, og \"state\" på dataene.\n",
     "dp.write_pandas(df, '/felles/mock_sysselsatte/companies_2019_30000', valuation='INTERNAL', state= 'INPUT')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5b75f548",
-   "metadata": {},
-   "source": [
-    "# I Prodsonen\n",
-    "Kan vi laste sas-data rett fra linux-stammene, men ikke fra S: - H: - X:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1919530d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
