Pandas series, index

--- a/Dag1-begreperFilosofi/_Dagsplan_Praktisk.ipynb
+++ b/Dag1-begreperFilosofi/_Dagsplan_Praktisk.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ff783b22",
+   "id": "fa1a66e0",
    "metadata": {},
    "source": [
     "### Kursstruktur\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79c6d742",
+   "id": "37fb2dfe",
    "metadata": {},
    "source": [
     "### Hvordan få dette \"repoet\" med kode-eksempler inn i \"din jupyter\"?"
@@ -30,18 +30,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c83ece03",
+   "id": "21b456f0",
    "metadata": {},
    "source": [
-    "- \"Stå i rett mappe\"\n",
-    "- git clone https://github.com/statisticsnorway/kurs-python-edx-companion.git\n",
-    "- (er også en knapp for clone i mappe-utforskeren på dapla)"
+    "- \"Stå i rett mappe\" på dapla\n",
+    "- I terminalen: \\\n",
+    "git clone https://github.com/statisticsnorway/kurs-python-edx-companion.git\n",
+    "- Eller i en notebook (som ligger i root): \\\n",
+    "!git clone https://github.com/statisticsnorway/kurs-python-edx-companion.git \\\n",
+    "(er også en knapp for clone i mappe-utforskeren på dapla)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46044d30",
+   "id": "e101f8d1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -49,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdd671d1",
+   "id": "e5eca2f5",
    "metadata": {},
    "outputs": [],
    "source": []
