--- a/Dag2-miljo/3-DfToPlot.ipynb
+++ b/Dag2-miljo/3-DfToPlot.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "bbbef046",
+   "id": "c9c3fd63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "1d8a1b75",
+   "id": "5b34645c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c33d949",
+   "id": "063f17c4",
    "metadata": {},
    "source": [
     "### Histogram over aldersfordeling"
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "db4ddabf",
+   "id": "c1c65805",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f3964ca",
+   "id": "baf9eb70",
    "metadata": {},
    "source": [
     "### Linjeplot av gjennomsnittlig arbeidsprosent blant arbeidstakere etter alder"
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "de81e5f0",
+   "id": "56366487",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "78d8e10a",
+   "id": "5a7f46ed",
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "3ecb8e00",
+   "id": "dee6203d",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "4ee70c70",
+   "id": "27216d1e",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88b5346a",
+   "id": "bf11adf9",
    "metadata": {},
    "source": [
     "### Bonus: Påfør gjennomsnittlig arbeidsprosent på alder tilbake på hoveddatasett"
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "f5cf05cb",
+   "id": "ee61bca2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,13 +514,16 @@
     "        # Og work_id ikke er tom\n",
     "       & (df['work_id'].notna())\n",
     "           # i denne nye kolonnen = påfør en avrundet arbeidsprosent fra katalogen\n",
-    "        , 'AlderGjennomsnittArbeidsprosent'] = round(i['work_percent'])"
+    "        , 'AlderGjennomsnittArbeidsprosent'] = round(i['work_percent'])\n",
+    "    \n",
+    "    #One-liner:\n",
+    "    #df.loc[ (df['age'] == i['age']) & (df['work_id'].notna()), 'AlderGjennomsnittArbeidsprosent'] = round(i['work_percent'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "77dc97c6",
+   "id": "dc4a6ffc",
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "922569cf",
+   "id": "c3a8bfac",
    "metadata": {},
    "outputs": [],
    "source": []
