--- a/Dag2-miljo/4-datainnlast_ProdsonenVsDapla.ipynb
+++ b/Dag2-miljo/4-datainnlast_ProdsonenVsDapla.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "41c8a5f8",
+   "id": "4d85ba46",
    "metadata": {},
    "source": [
     "# Videohjelp"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "57451221",
+   "id": "e689a720",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb873150",
+   "id": "3ffcb1ed",
    "metadata": {},
    "source": [
     "# I Prodsonen\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d044e1b8",
+   "id": "44220b93",
    "metadata": {},
    "source": [
     "### Hvordan få edx-kursmateriell inn i prodsonen"
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cc56ea3d",
+   "id": "3e2f3385",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12576239",
+   "id": "4a803654",
    "metadata": {},
    "source": [
     "### Python i prodsonen med stammedata"
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "ee7430da",
+   "id": "69eb1859",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fc61770",
+   "id": "ec37b7c2",
    "metadata": {},
    "source": [
     "Simens post på yammer om at man kanskje bør velge prodsonen å lære seg først:\\\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7b8037b",
+   "id": "1dc335bb",
    "metadata": {},
    "source": [
     "Annonsering av Jupyterversjonen:\\\n",
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cb756d7",
+   "id": "737a64ec",
    "metadata": {},
    "source": [
     "I prodsonen - citrix bruk Chrome og gå til adressen:\\\n",
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03caf785",
+   "id": "d2aa166a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efb59062",
+   "id": "45117739",
    "metadata": {},
    "source": [
     "\"Root\"-mappen din i denne instansen er \"hjem-mappen\" din på linux."
@@ -168,7 +168,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed63ca52",
+   "id": "ef95dd7a",
+   "metadata": {},
+   "source": [
+    "#### Kan vi skrive sas-data tilbake igjen?\n",
+    "https://stackoverflow.com/questions/49235845/export-pandas-dataframe-to-sas-sas7bdat-format \\\n",
+    "Nei? Men vi kan kanskje skrive ett pythonscript for å generere \"innlastings-SAS-kode\"..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb704db1",
    "metadata": {},
    "source": [
     "Bitbucket er ett alternativ til github.com og er delt mellom prodsonen og adminsonen, og kan nås på adressen:\\\n",
@@ -177,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31435a1a",
+   "id": "8b7e39fb",
    "metadata": {},
    "source": [
     "<hr>"
@@ -185,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33e1fbd4",
+   "id": "121185b2",
    "metadata": {},
    "source": [
     "# På Dapla"
@@ -193,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94423317",
+   "id": "e03a25b5",
    "metadata": {},
    "source": [
     "### Hvordan få edx-kursmateriell inn i Dapla"
@@ -202,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "063fa01b",
+   "id": "0d3d6065",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -239,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3467dcd",
+   "id": "ddca894f",
    "metadata": {},
    "source": [
     "## På dapla har vi biblioteket \"dapla\"\n",
@@ -249,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c8280a2b",
+   "id": "0bb8b6d4",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1a674bcf",
+   "id": "256a7e82",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9eda183a",
+   "id": "9e435fa0",
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "441a9576",
+   "id": "83b7e6e8",
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c36a4a6e",
+   "id": "489a2f1a",
    "metadata": {},
    "outputs": [],
    "source": [
